<resources>
    <string name="app_name">CodeQuarks</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Information">Information</string>
    <string name="camera">Camera</string>
    <string name="kotlin_quiz">Kotlin Quiz</string>
    <string name="kotlin_description">Kotlin Description</string>
    <string name="codequarks">CodeQuarks</string>
    <string name="kotlin">Kotlin</string>
    <string name="textview">TextView</string>
    <string name="display_entry">Display Entry</string>
    <string name="quiz_time">Quiz Time</string>
    <string name="desctext">DescText</string>
    <string name="myCamera">Camera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>