<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.codequarks.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_desc"
            app:destination="@id/desc" />
        <action
            android:id="@+id/action_navigation_home_to_camera"
            app:destination="@id/camera" />
        <action
            android:id="@+id/action_navigation_home_to_quiz"
            app:destination="@id/quiz" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.codequarks.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.codequarks.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/desc"
        android:name="com.example.codequarks.Desc"
        android:label="fragment_desc"
        tools:layout="@layout/fragment_desc" />
    <fragment
        android:id="@+id/camera"
        android:name="com.example.codequarks.Camera"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/quiz"
        android:name="com.example.codequarks.Quiz"
        android:label="fragment_quiz"
        tools:layout="@layout/fragment_quiz" />
</navigation>